--- a/public/css/sobre.css
+++ b/public/css/sobre.css
@@ -28,14 +28,14 @@ h3 {
     font-size: 20px;
 }
 
-.quadro {
+.sobre .quadro {
     display: flex;
     flex-direction: column;
     align-items: center;
     padding-top: 90px;
 }
 
-.quadro img{
+.sobre .quadro img{
     width: 234.45px;
     height: 310px;
 }
