--- a/public/css/login.css
+++ b/public/css/login.css
@@ -3,7 +3,34 @@ p {
 }
 
 .formulario a {
-    color: var(--douradoClaro);
+    color: var(--dourado);
+}
+
+.formulario {
+    font-size: 15px;
+    background-color: rgba(0, 0, 0, 0.4);
+    border-radius: 35px;
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    width: 571px;
+    height: 450px;
+}
+
+.formulario div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    width: 100%;
 }
 
 input {
@@ -12,6 +39,24 @@ input {
 }
 
 button {
-    width: 40%;
+    width: 61%;
     height: 37px;
+    cursor: pointer;
+    margin-top: 25px;
+}
+
+button:hover {
+    transition: 0.6s;
+    width: 61%;
+    height: 37px;
+    cursor: pointer;
+    background-color: var(--dourado);
+    color: #fff;
+    border: 1px solid black;
+}
+
+.formulario p{
+    padding-top: 20px;
+    font-size: 17px;
+    color: white;
 }
