--- a/public/css/adaptacoes.css
+++ b/public/css/adaptacoes.css
@@ -21,6 +21,8 @@
 .adaptacoes .container img {
     width: 524px;
     height: 294px;
+    border: 3px solid var(--dourado);
+    border-radius: 35px;
 }
 
 .container .descricao {
