--- a/public/css/planetas.css
+++ b/public/css/planetas.css
@@ -15,29 +15,74 @@
     height: 266px;
 }
 
-.planetas h3{
+.planetas h3 {
     color: white;
     font-family: sans-serif;
 }
 
-.planetas p{
+.planetas p {
     color: var(--douradoClaro);
     font-family: "Dune Rise";
 }
 
 .planeta2 {
-    padding-top: 200px;   
+    padding-top: 200px;
 }
 
 .planeta3 {
-    padding-top: 400px;   
+    padding-top: 400px;
 }
 
 
 .planeta5 {
-    padding-top: 200px;   
+    padding-top: 200px;
 }
 
 .planeta6 {
-    padding-top: 400px;   
+    padding-top: 400px;
+}
+
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0, 0, 0, 0.4);
+}
+
+.modal-container {
+    background-color: gray;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 30%;
+    height: 40%;
+}
+
+.close {
+    color: gray;
+    float: right;
+    font-size: 30px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.arrakis,
+.caladan,
+.gieid,
+.chapterhouse,
+.kaitain,
+.salusa:hover {
+    cursor: pointer;
 }
