--- a/public/css/jogo.css
+++ b/public/css/jogo.css
@@ -19,6 +19,7 @@ body {
   justify-content: center;
   border-radius: 5px;
   background: #293447;
+  border-radius: 20px;
 }
 
 .container h1{
@@ -60,4 +61,13 @@ body {
     font-size: 1rem;
     padding: 15px 27px;
   }
+}
+
+.sair {
+  width: 50px;
+  height: 50px;
+  float: right;
+  margin-top: 10px;
+  margin-right: 10px;
+  cursor: pointer;
 }
