--- a/public/css/tela_inicial_jogo.css
+++ b/public/css/tela_inicial_jogo.css
@@ -63,3 +63,12 @@ body {
   margin-bottom: 100px;
   margin-right: 20px;
 }
+
+.sair {
+  width: 50px;
+  height: 50px;
+  float: right;
+  margin-top: 10px;
+  margin-right: 10px;
+  cursor: pointer;
+}
