--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -91,8 +91,8 @@
         border: 3px solid #FFCE65;
         border-radius: 20px;
         width: 50%;
-        height: 80%;
-        margin-left: 20px;
-        margin-top: 40px;
+        height: 20%;
+        margin-left: 25%;
+        margin-top: 60px;
         padding-bottom: 20px;
     }
