--- a/public/css/planetas.css
+++ b/public/css/planetas.css
@@ -59,14 +59,37 @@
     overflow: auto;
     background-color: rgb(0, 0, 0, 0.4);
 }
+.modal_arrakis p,
+.modal_caladan p,
+.modal_gieid p,
+.modal_chapterhouse p,
+.modal_kaitain p,
+.modal_salusa p{
+    color: antiquewhite;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: left;
+    font-size: 19px;
+    padding-top: 20px;
+}
+
+.modal_arrakis h4,
+.modal_caladan h4,
+.modal_gieid h4,
+.modal_chapterhouse h4,
+.modal_kaitain h4,
+.modal_salusa h4{
+    font-size: 20px;
+    color: var(--dourado);
+}
 
 .modal-container {
-    background-color: gray;
+    background-color: rgb(43, 41, 41);
     margin: 15% auto;
     padding: 20px;
-    border: 1px solid #888;
+    border: 1px solid var(--douradoClaro);
     width: 30%;
     height: 40%;
+    border-radius: 20px;
 }
 
 .close_arrakis,
