--- a/public/css/quiz.css
+++ b/public/css/quiz.css
@@ -57,6 +57,10 @@ button:hover {
     background-color: #444;
 }
 
+.answers button:hover {
+    background-color: green;
+}
+
 #Resultado {
     font-size: 24px;
     margin-top: 30px;
