--- a/public/css/tela_inicial_jogo.css
+++ b/public/css/tela_inicial_jogo.css
@@ -6,7 +6,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-between;
+  /* justify-content: space-between; */
   position: absolute;
   width: 100vmin;
   height: 80vmin;
@@ -31,7 +31,7 @@ body {
   border-radius: 50px;
   background-color: rgb(0, 0, 0, 0.2);
   color: #EFA608;
-  margin-top: 20px;
+  /* margin-top: 20px; */
 }
 
 .tela_inicial .titulo {
@@ -63,6 +63,7 @@ body {
   gap: 40px;
   margin-bottom: 100px;
   margin-right: 20px;
+  margin-top: 200px;
 }
 
 .sair {
@@ -70,45 +71,45 @@ body {
   height: 50px;
   float: right;
   margin-top: 10px;
-  margin-right: 10px;
+  margin-left: 680px;
   cursor: pointer;
 }
 
-  .placar-jogadores {
-    display: none;
-    text-align: center;
-    align-items: center;
-    position: absolute;
-    width: 100vmin;
-    height: 80vmin;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    margin: auto;
-    background-color: rgba(0, 0, 0, 0.9);
-    z-index: 1;
-    font-family: "Dune Rise";
-    color: white;
-    margin-left: 30%;
-  }
+.placar-jogadores {
+  display: none;
+  text-align: center;
+  align-items: center;
+  position: absolute;
+  width: 100vmin;
+  height: 80vmin;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  background-color: rgba(0, 0, 0, 0.9);
+  z-index: 1;
+  font-family: "Dune Rise";
+  color: white;
+  margin-left: 30%;
+}
 
-  .placar-jogadores .titulo {
-    color: #EFA608;
-  }
+.placar-jogadores .titulo {
+  color: #EFA608;
+}
 
-  #recorde_usuarios {
-    list-style-type: none;
-    font-size: 20px;
-    text-align: left;
-    margin-left: 130px;
-  }
+#recorde_usuarios {
+  list-style-type: none;
+  font-size: 20px;
+  text-align: left;
+  margin-left: 130px;
+}
 
-  .close {
-    color: #EFA608;
-    float: right;
-    font-size: 50px;
-    font-weight: bold;
-    cursor: pointer;
-    margin-right: 10px;
-  }
+.close {
+  color: #EFA608;
+  float: right;
+  font-size: 50px;
+  font-weight: bold;
+  cursor: pointer;
+  margin-right: 10px;
+}
